Fix base and update gitignore

--- a/BCN_2019/index.html
+++ b/BCN_2019/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>ChurrasCode 2019 - BCN</title>
-  <base href="BCN_2019/">
+  <base href="/BCN_2019/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
