--- a/BCN_2019/index.html
+++ b/BCN_2019/index.html
@@ -47,7 +47,7 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="/BCN_2019#program">agenda</a></li>
-                <li><a href="/BCN_2019#program">información</a></li>
+                <li><a href="/BCN_2019#location">localización</a></li>
                 <li><a href="/BCN_2019#program">entradas</a></li>
               </ul>
             </nav>
@@ -63,7 +63,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-10">
-          <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100"> > 2019, BCN </span>
+          <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100"> > 8 JUN 2019, BCN </span>
           <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200"> Código & Churrasco</h1>
           <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">La conferencia que causa más
             manchas en el teclado.</span>
@@ -187,68 +187,85 @@
           </p>
         </div> -->
       </div>
-      <p>Pronto daremos detalles, pero cuenta con una hora para comer.</p>
-      <!-- <div class="row align-items-stretch program">
+      <div class="row align-items-stretch program">
         <div class="col-12 border-top border-bottom py-5" data-aos="fade" data-aos-delay="200">
           <div class="row align-items-stretch">
-            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">8:00</span> <span>AM</span></div>
+
+            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">10:30</span></div>
             <div class="col-md-9">
-              <h2 class="text-white">Design your open source strategy</h2>
-              <span>Chris Mathews</span>
+              <h2 class="text-white">Welcome & Open space </h2>
             </div>
           </div>
         </div>
 
         <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="300">
           <div class="row align-items-stretch">
-            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">9:30</span> <span>AM</span></div>
+            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">11:00</span></div>
             <div class="col-md-9">
-              <h2 class="text-white">Design your open source strategy</h2>
-              <span>Chris Mathews</span>
+              <h2 class="text-white">CQRS and Event Sourcing</h2>
+              <span>Yonah Forst - @HappyScribe</span>
             </div>
           </div>
         </div>
 
         <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="400">
           <div class="row align-items-stretch">
-            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">10:30</span> <span>AM</span></div>
+            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">12:00</span></div>
             <div class="col-md-9">
-              <h2 class="text-white">Design your open source strategy</h2>
-              <span>Chris Mathews</span>
+              <h2 class="text-white">Diseño orientado a Componentes</h2>
+              <span>Javier Marquez - @YouCanBook.me</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="400">
+          <div class="row align-items-stretch">
+            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">13:00</span></div>
+            <div class="col-md-9">
+              <h2 class="text-white">TBA</h2>
+              <span>...</span>
             </div>
           </div>
         </div>
 
         <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="500">
           <div class="row align-items-stretch">
-            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">10:45</span> <span>NOON</span></div>
-            <div class="col-md-9">
-              <h2 class="text-white">Break With Snacks</h2>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="600">
-          <div class="row align-items-stretch">
-            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">11:30</span> <span>AM</span></div>
-            <div class="col-md-9">
-              <h2 class="text-white">Design your open source strategy</h2>
-              <span>Chris Mathews</span>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="700">
-          <div class="row align-items-stretch">
-            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">12:00</span> <span>NOON</span></div>
+            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">14:00</span></div>
             <div class="col-md-9">
               <h2 class="text-white">Break For Lunch</h2>
             </div>
           </div>
         </div>
 
+        <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="600">
+          <div class="row align-items-stretch">
+            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">16:00</span></div>
+            <div class="col-md-9">
+              <h2 class="text-white">Next generation paging algorithms</h2>
+              <span>Odín del Rio Piñeiro - @N26</span>
+            </div>
+          </div>
+        </div>
 
-      </div> -->
+        <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="700">
+          <div class="row align-items-stretch">
+            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">17:00</span></div>
+            <div class="col-md-9">
+              <h2 class="text-white">TBA</h2>
+              <span>...</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="700">
+          <div class="row align-items-stretch">
+            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">18:00</span></div>
+            <div class="col-md-9">
+              <h2 class="text-white">Beers and networking</h2>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -265,9 +282,9 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus.</p>
           </div> -->
       </div>
-      <p>
-        Aunque te sorprenda, estamos negociando con varias empresas.
-      </p>
+      <!-- <p>
+        YouCanBook.me
+      </p> -->
       <!-- <div class="row mb-5">
         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
           <img src="images/logo_1.png" alt="Image" class="img-fluid">
@@ -299,91 +316,34 @@
     </div>
   </div>
 
-  <!-- News -->
-  <!-- <div class="site-section">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-lg-4">
-            <div class="site-section-heading" data-aos="fade-up">
-              <h2>News</h2>
-            </div>
-          </div>
-          <div class="col-lg-6 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="100">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus.</p>
-          </div>
-        </div>
-
-        <div class="row mb-5">
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry"  data-aos="fade-up" data-aos-delay="200">
-            <a href="#" class="d-block mb-4">
-              <img src="images/person_1.jpg" alt="Image" class="img-fluid"> 
-            </a>
-            <h2 class="mb-4"><a href="#">Design your open source strategy</a></h2>
-            <div class="mb-4 post-meta d-flex align-items-center">
-              <div class="mr-2"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></div>
-              <div><span>By <a href="#">Emely Peters</a></span> &mdash; <span>Sep. 10, 2019</span></div> 
-            </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus.
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="300">
-            <a href="#" class="d-block mb-4">
-              <img src="images/person_1.jpg" alt="Image" class="img-fluid"> 
-            </a>
-            <h2 class="mb-4"><a href="#">Design your open source strategy</a></h2>
-            <div class="mb-4 post-meta d-flex align-items-center">
-              <div class="mr-2"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></div>
-              <div><span>By <a href="#">Emely Peters</a></span> &mdash; <span>Sep. 10, 2019</span></div> 
-            </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus.
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="400">
-            <a href="#" class="d-block mb-4">
-              <img src="images/person_1.jpg" alt="Image" class="img-fluid"> 
-            </a>
-            <h2 class="mb-4"><a href="#">Design your open source strategy</a></h2>
-            <div class="mb-4 post-meta d-flex align-items-center">
-              <div class="mr-2"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></div>
-              <div><span>By <a href="#">Emely Peters</a></span> &mdash; <span>Sep. 10, 2019</span></div> 
-            </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus.
-          </div>
-
-        </div>
-        <div class="row" data-aos="fade-up" data-aos-delay="500">
-          <div class="col-12 text-center">
-            <a href="#" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>More Blog Posts</span></a>
+  <!-- Location -->
+  <div id="location" class="site-section">
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-lg-4">
+          <div class="site-section-heading" data-aos="fade-up">
+            <h2>Localización</h2>
           </div>
         </div>
       </div>
-    </div> -->
+
+      <div class="row mb-5">
+        <div class="col-12 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.528831568535!2d2.204993315426376!3d41.40603767926244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a346c46a4b43%3A0xfe2e784f3d840ba!2sCarrer+de+Bac+de+Roda%2C+64%2C+08005+Barcelona!5e0!3m2!1ses!2ses!4v1557253834077!5m2!1ses!2ses" frameborder="0" style="border:0" allowfullscreen>
+          </iframe>
+        </div>
+        <div class="col-12 col-md-6 pt-5">
+          <h3>VistaPrint Offices.</h3>
+          <h4>Carrer de Bac de Roda, 64, 08005 Barcelona</h4>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <footer class="site-footer">
     <div class="container">
-      <div class="row mb-5">
-        <div class="col-md-4">
-          <h2 class="footer-heading text-uppercase mb-4">About</h2>
-          <p>Churrascode es una idea original de un grupo de Gallegos, más info
-            <a href="https://groups.google.com/forum/#!topic/gdg-vigo/YoycSgqV8JQ">aquí.</a>
-          </p>
-        </div>
-        <div class="col-md-3 ml-auto">
-          <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
-          <ul class="list-unstyled">
-            <li><a href="/BCN_2019#program">Agenda</a></li>
-          </ul>
-        </div>
-        <div class="col-md-4">
-          <h2 class="footer-heading text-uppercase mb-4">Connect with Us</h2>
-          <p>
-            <a href="https://vigotechalliance.slack.com" class="p-2 pl-0">VigoTech</span></a>
-            <a href="https://bcneng.slack.com" class="p-2 pl-0">BcnEng</span></a>
-          </p>
-        </div>
-      </div>
       <div class="row">
-
         <div class="col-md-12 text-center">
           <div class="border-top pt-5">
             <p>
