Pass ofendiditos linter

--- a/BCN_2019/index.html
+++ b/BCN_2019/index.html
@@ -39,7 +39,7 @@
         <div class="row align-items-center">
           <div class="col-11 col-xl-2">
             <h1 class="mb-0">
-              <a href="/" class="text-white h2 mb-0">churras<span class="text-primary">Code</span></a>
+              <a href="/" class="text-white h2 mb-0">churrasco<span class="text-primary">de</span></a>
             </h1>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block">
@@ -65,8 +65,9 @@
         <div class="col-md-10">
           <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100"> > 8 JUN 2019, BCN </span>
           <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200"> Código & Churrasco</h1>
-          <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">La conferencia que causa más
-            manchas en el teclado.</span>
+          <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">
+            La única conferencia que incluye chimichurri.
+          </span>
           <a href="/" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Tickets no Disponibles</span></a>
         </div>
       </div>
