--- a/BCN_2019/index.html
+++ b/BCN_2019/index.html
@@ -66,7 +66,7 @@
           <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100"> > 8 JUN 2019, BCN </span>
           <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200"> Código & Churrasco</h1>
           <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">
-            La única conferencia que incluye chimichurri.
+            La única conferencia con chimichurri incluido.
           </span>
           <a href="/" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Tickets no Disponibles</span></a>
         </div>
